Cambios iniciales solo de la cadena de conexion y evitar las dll y pdb.

--- a/EnroladorServicioWeb/Web.config
+++ b/EnroladorServicioWeb/Web.config
@@ -4,9 +4,9 @@
   </configSections>
   <connectionStrings>
     <add name="EnroladorWebServices.Properties.Settings.ConnectionString"
-      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=$ql-2008-SCU/*-;" />
+      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi" />
     <add name="EnroladorServicioWeb.Properties.Settings.ConnectionString"
-      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=$ql-2008-SCU/*-;" />
+      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
