Quitando los dlls y pdb.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /OUTPUT/
 /packages/
+/EnroladorAccesoDatos/obj/Debug/EnroladorAccesoDatos.dll
+/EnroladorAccesoDatos/obj/Debug/EnroladorAccesoDatos.pdb
+/EnroladorServicioWeb/bin/EnroladorAccesoDatos.dll
+/EnroladorServicioWeb/bin/EnroladorAccesoDatos.pdb
+/EnroladorServicioWeb/bin/EnroladorServicioWeb.dll
+/EnroladorServicioWeb/bin/EnroladorServicioWeb.pdb
+/EnroladorServicioWeb/obj/Debug/EnroladorServicioWeb.dll
+/EnroladorServicioWeb/obj/Debug/EnroladorServicioWeb.pdb
