Sin cambios locales

--- a/EnroladorServicioWeb/Web.config
+++ b/EnroladorServicioWeb/Web.config
@@ -5,8 +5,8 @@
   <connectionStrings>
     <add name="EnroladorWebServices.Properties.Settings.ConnectionString"
       connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi" />
-    <add name="EnroladorServicioWeb.Properties.Settings.ConnectionString"
-      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi" />
+    <!--<add name="EnroladorServicioWeb.Properties.Settings.ConnectionString"
+      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi" />-->
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
