--- a/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
+++ b/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Ayudantes\AyudanteDirectorioDatos.cs" />
     <Compile Include="Ayudantes\AyudanteLogs.cs" />
     <Compile Include="Ayudantes\AyudanteSQL.cs" />
-    <Compile Include="Dominio\Notificacion.cs" />
+    <Compile Include="Dominio\POCONotificacion.cs" />
     <Compile Include="Dominio\POCOCadena.cs" />
     <Compile Include="Dominio\POCOCargo.cs" />
     <Compile Include="Dominio\POCOContrato.cs" />
