--- a/EnroladorServicioWeb/Web.config
+++ b/EnroladorServicioWeb/Web.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="EnroladorServicioWeb.Properties.Settings.ConnectionString"
-      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=$ql-2008-SCU/*-;" />
+      connectionString="Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi;" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
