Toda la sincronizacion terminada. Falta el log.

--- a/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
+++ b/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
@@ -199,6 +199,7 @@
       <DependentUpon>FrmNotificaciones.cs</DependentUpon>
     </Compile>
     <Compile Include="CapaLogicaNegocio\NegocioEnrolador.cs" />
+    <Compile Include="CapaLogicaNegocio\QueryableExtensions.cs" />
     <Compile Include="Connected Services\EnroladorServicioWeb\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
