Programando funcionalidades del FrontEnd: Manipular Asistencia y Contratos, el flujo funciona ya visualmente. En Manipular Asistencia ya adiciona, Solo falta guardar el contexto e insertar la accion.

--- a/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
+++ b/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
@@ -379,6 +379,18 @@
     <Content Include="CapaInterfazUsuario\Recursos\Logo_Biometria_Aplicada.png" />
     <Content Include="CapaInterfazUsuario\Recursos\Manos.png" />
     <Content Include="CapaInterfazUsuario\Recursos\SplashScreen.png" />
+    <None Include="Resources\apply_16x161.png" />
+    <None Include="Resources\monthview_16x16.png" />
+    <None Include="Resources\today_32x32.png" />
+    <None Include="Resources\clear_16x16.png" />
+    <None Include="Resources\edit_16x16.png" />
+    <None Include="Resources\additem_32x32.png" />
+    <None Include="Resources\additem_16x16.png" />
+    <None Include="Resources\save_16x16.png" />
+    <None Include="Resources\save_32x32.png" />
+    <None Include="Resources\saveas_32x32.png" />
+    <None Include="Resources\saveas_16x16.png" />
+    <None Include="Resources\cancel_16x161.png" />
     <None Include="Resources\customer_16x16.png" />
     <None Include="Resources\bouser_16x16.png" />
     <None Include="Resources\apply_16x16.png" />
