Solo resta probar las acciones y enlazarla con el SAVEChange en el contexto.

--- a/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
+++ b/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Ayudantes\AyudanteDirectorioDatos.cs" />
     <Compile Include="Ayudantes\AyudanteLogs.cs" />
     <Compile Include="Ayudantes\AyudanteSQL.cs" />
+    <Compile Include="Dominio\POCOGlobal.cs" />
     <Compile Include="Dominio\POCONotificacion.cs" />
     <Compile Include="Dominio\POCOCadena.cs" />
     <Compile Include="Dominio\POCOCargo.cs" />
