--- a/EnroladorStandAloneV2/packages.config
+++ b/EnroladorStandAloneV2/packages.config
@@ -6,4 +6,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" />
   <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net45" />
+  <package id="Z.EntityFramework.Extensions" version="3.16.20" targetFramework="net45" />
 </packages>
