--- a/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
+++ b/EnroladorStandAloneV2/EnroladorStandAloneV2.csproj
@@ -382,6 +382,10 @@
     <Content Include="CapaInterfazUsuario\Recursos\Logo_Biometria_Aplicada.png" />
     <Content Include="CapaInterfazUsuario\Recursos\Manos.png" />
     <Content Include="CapaInterfazUsuario\Recursos\SplashScreen.png" />
+    <None Include="Resources\checkbox_32x32.png" />
+    <None Include="Resources\close_32x32.png" />
+    <None Include="Resources\about_32x32.png" />
+    <None Include="Resources\apply_32x321.png" />
     <None Include="Resources\employee_16x16.png" />
     <None Include="Resources\usergroup_16x16.png" />
     <None Include="Resources\cancel_16x162.png" />
