--- a/EnroladorServicioWeb/EnroladorServicioWeb.csproj
+++ b/EnroladorServicioWeb/EnroladorServicioWeb.csproj
@@ -62,7 +62,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="EnroladorServicioWeb.svc" />
+    <Content Include="SQL\SP\CREAR_ESA_Crear_EmpleadoTurnoServicioCasino.sql" />
+    <Content Include="SQL\SP\CREAR_ESA_Eliminar_EmpleadoTurnoServicioCasino.sql" />
+    <Content Include="SQL\SP\CREATE_EMPLEADO.sql" />
+    <Content Include="SQL\SP\ESA_Crear_Empleado.sql" />
+    <Content Include="SQL\SP\Modificar_CREATE_EMPLEADO.sql" />
     <Content Include="SQL\SP\Modificar_ESA_Crear_Contrato.sql" />
+    <Content Include="SQL\SP\Modificar_ESA_Crear_Empleado.sql" />
+    <Content Include="SQL\SP\Modificar_ESA_Login.sql" />
+    <Content Include="SQL\SP\Modificar_ESA_Revalidar.sql" />
     <Content Include="SQL\Tablas\Modificar_Contrato.sql" />
     <Content Include="SQL\Vistas\Modificar_ESA_Contrato.sql" />
     <Content Include="Web.config" />
