--- a/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
+++ b/EnroladorAccesoDatos/EnroladorAccesoDatos.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EnroladorAccesoDatos</RootNamespace>
     <AssemblyName>EnroladorAccesoDatos</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
@@ -100,6 +100,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SQLite\BulkContext.cs" />
     <Compile Include="SQLite\Cadena.cs">
       <DependentUpon>SQLiteEnrollModel.tt</DependentUpon>
     </Compile>
@@ -145,6 +146,7 @@
     <Compile Include="SQLite\Sincronizacion.cs">
       <DependentUpon>SQLiteEnrollModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="SQLite\SQLiteBulkCopy.cs" />
     <Compile Include="SQLite\SQLiteEnrollModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
