--- a/EnroladorServicioWeb/Properties/Settings.settings
+++ b/EnroladorServicioWeb/Properties/Settings.settings
@@ -5,9 +5,9 @@
     <Setting Name="ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi;&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=$ql-2008-SCU/*-;&lt;/ConnectionString&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=drjldigi;</Value>
+      <Value Profile="(Default)">Pooling=false;Data Source=.;Initial Catalog=SCCSPArauco;User Id=sa;Password=$ql-2008-SCU/*-;</Value>
     </Setting>
   </Settings>
 </SettingsFile>
