--- a/EnroladorStandAloneV2/packages.config
+++ b/EnroladorStandAloneV2/packages.config
@@ -3,8 +3,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="MSFT.ParallelExtensionsExtras" version="1.2.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.109.2" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net45" />
-  <package id="Z.EntityFramework.Extensions" version="3.16.20" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
