--- a/EnroladorAccesoDatos/App.config
+++ b/EnroladorAccesoDatos/App.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SQLiteEnrollEntities" connectionString="metadata=res://*/SQLite.SQLiteEnrollModel.csdl|res://*/SQLite.SQLiteEnrollModel.ssdl|res://*/SQLite.SQLiteEnrollModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;E:\Trabajo\Chile\Trabajo 2\Nuevo Enrolador\EnroladorStandAloneV2\OUTPUT\Roll.sqlite3&quot;;base schema name=DbEnrollSqliteContext'" providerName="System.Data.EntityClient" />
+    <add name="SQLiteEnrollEntities" connectionString="metadata=res://*/SQLite.SQLiteEnrollModel.csdl|res://*/SQLite.SQLiteEnrollModel.ssdl|res://*/SQLite.SQLiteEnrollModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;D:\Usuarios\Leandro\_NewEnroller\REPO\OUTPUT\Roll.sqlite3&quot;;base schema name=DbEnrollSqliteContext'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
