--- a/EnroladorStandAloneV2/app.config
+++ b/EnroladorStandAloneV2/app.config
@@ -28,7 +28,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="SQLiteEnrollEntities" connectionString="metadata=res://*/SQLite.SQLiteEnrollModel.csdl|res://*/SQLite.SQLiteEnrollModel.ssdl|res://*/SQLite.SQLiteEnrollModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;D:\Trabajo\Chile\Trabajo 2\GitHub\NuevoEnrolador\OUTPUT\Roll.sqlite3&quot;;base schema name=DbEnrollSqliteContext'" providerName="System.Data.EntityClient" />
+    <add name="SQLiteEnrollEntities" connectionString="metadata=res://*/SQLite.SQLiteEnrollModel.csdl|res://*/SQLite.SQLiteEnrollModel.ssdl|res://*/SQLite.SQLiteEnrollModel.msl;provider=System.Data.SQLite.EF6;provider connection string='data source=&quot;D:\Usuarios\Leandro\_NewEnroller\REPO\OUTPUT\Roll.sqlite3&quot;;base schema name=DbEnrollSqliteContext'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
